--- a/Client/RiskiInsurance.Desktop/RiskiInsuranceDesktop.csproj
+++ b/Client/RiskiInsurance.Desktop/RiskiInsuranceDesktop.csproj
@@ -24,9 +24,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Avalonia.Desktop" Version="*-*" />
+	<PackageReference Include="Avalonia.Desktop" Version="*" />
 	<!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-	<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="*-*" />
+	<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="*" />
   </ItemGroup>
 
   <ItemGroup>
