--- a/Client/RiskiInsurance/RiskiInsurance.csproj
+++ b/Client/RiskiInsurance/RiskiInsurance.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Avalonia" Version="*-*" />
-	<PackageReference Include="Avalonia.Themes.Fluent" Version="*-*" />
+	<PackageReference Include="Avalonia" Version="*" />
+	<PackageReference Include="Avalonia.Themes.Fluent" Version="*" />
 	<!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-	<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="*-*" />
+	<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="*" />
   </ItemGroup>
 </Project>
