Rewrite V server to use SQLite and add AppImage build

--- a/Client/RiskiInsurance.Desktop/RiskiInsuranceDesktop.csproj
+++ b/Client/RiskiInsurance.Desktop/RiskiInsuranceDesktop.csproj
@@ -8,6 +8,8 @@
 	<PublishAot>true</PublishAot>
 	<StripSymbols>true</StripSymbols>
 
+	<PublishDir Condition="$(RuntimeIdentifier.StartsWith('linux'))">linux/build</PublishDir>
+
 	<IldDisableReflection>true</IldDisableReflection>
 	<InvariantGlobalization>true</InvariantGlobalization>
 	<IlcOptimizationPreference>Size</IlcOptimizationPreference>
