--- a/Client/RiskiInsurance.Browser/RiskiInsuranceBrowser.csproj
+++ b/Client/RiskiInsurance.Browser/RiskiInsuranceBrowser.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia.Browser" Version="*-*" />
+	<PackageReference Include="Avalonia.Fonts.Inter" Version="*" />
   </ItemGroup>
 
   <ItemGroup>
