--- a/Client/RiskiInsurance.Desktop/RiskiInsuranceDesktop.csproj
+++ b/Client/RiskiInsurance.Desktop/RiskiInsuranceDesktop.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
 	<PackageReference Include="Avalonia.Desktop" Version="*" />
+	<PackageReference Include="Avalonia.Fonts.Inter" Version="*" />
 	<!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
 	<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="*" />
   </ItemGroup>
